--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 			</div>
 			
 			<div class="post-grid-block">
-				<p><span>Title</span></p>
+				<p><span>Typeform Form</span></p>
 				
-				<p>Description</p>
+				<!--<p>Description</p>-->
 				
-				<p><span>Shortened link: </span>https://bit.ly</p>
+				<p><a href="type.html">Typeform link</a></p>
 				</p>
 			</div>
 			
