--- a/webar.html
+++ b/webar.html
@@ -19,11 +19,16 @@
 		<!--<a-marker preset ="custom" type="pattern" url="pattern-100 note.patt"> -->
 	            <a-entity
 	            position="0 0 -2"
-	            scale="0.5 0.5 0.5"
-	            gltf-model="shell_one_nostalgia/scene.gltf"
-	            ></a-entity>
+	            scale="1 1 1"
+	            gltf-model="starkvind.glb"
+	            <!--  -->
+	            <!--scale="0.5 0.5 0.5"-->
+	            <!--gltf-model="shell_one_nostalgia/scene.gltf"-->
+				
+	            </a-entity>
 		</a-marker>
 		<a-entity camera></a-entity>
 	</a-scene>
+	
 </body>
 </html>
