--- a/webar.html
+++ b/webar.html
@@ -20,7 +20,7 @@
 	            <a-entity
 	            position="0 0 -2"
 	            scale="1 1 1"
-	            gltf-model="starkvind.gltf"
+	            gltf-model="starkvind.gltf">
 	            <!--  -->
 	            <!--scale="0.5 0.5 0.5"-->
 	            <!--gltf-model="shell_one_nostalgia/scene.gltf"-->
