--- a/webar.html
+++ b/webar.html
@@ -20,9 +20,7 @@
 	            <a-entity
 	            position="0 0 -2"
 	            scale="0.1 0.1 0.1"
-	            gltf-model="starkvind.gltf">
-
-				
+	            gltf-model="starkvinfobj.obj">
 	            </a-entity>
 		</a-marker>
 		<a-entity camera></a-entity>
