--- a/webar.html
+++ b/webar.html
@@ -18,9 +18,9 @@
 		<a-marker preset="hiro">
 		<!--<a-marker preset ="custom" type="pattern" url="pattern-100 note.patt"> -->
 	            <a-entity
-	            position="0 0 -2"
+	            position="0 0 0"
 	            scale="0.1 0.1 0.1"
-	            gltf-model="starkvinfobj.obj">
+	            gltf-model="airpurifier.glb">
 	            </a-entity>
 		</a-marker>
 		<a-entity camera></a-entity>
