--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				
 				<p>Description</p>
 				
-				<p><span>Shortened link: </span>https://bit.ly</p>
+				<p><a href="mockup.html">Mockup</a></p>
 				</p>
 			</div>
 			
